<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_login_vertical_margin_2dp"
    android:paddingLeft="@dimen/activity_login_horizontal_margin_2dp"
    android:paddingRight="@dimen/activity_login_horizontal_margin_2dp"
    android:paddingTop="@dimen/activity_login_vertical_margin_2dp"
    tools:context="cross.com.auction.LoginActivity">

    <TextView
        android:id="@+id/userInfoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_information"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/userIdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userInfoId"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id_text" />

        <TextView
            android:id="@+id/accUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIdLayout"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_text" />

        <TextView
            android:id="@+id/accUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userNoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameLayout"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_no_text" />

        <TextView
            android:id="@+id/accUserNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/accUserBids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNoLayout"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_bids"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/accUserBids"
        android:background="@android:color/darker_gray"></View>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_acc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/separator"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:text="@string/logout_button_text" />
</RelativeLayout>
