<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cross.com.auction.fragments.LoginFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/appTextMaterialDark" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/login_password_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_email_layout"
        android:layout_centerInParent="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/appTextMaterialDark" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_main_layout"
        android:layout_centerInParent="true"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="Name"
            android:inputType="textEmailAddress"
            android:textColor="@color/appTextMaterialDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_mobile_no_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_name_layout"
        android:layout_centerInParent="true"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/signup_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="Mobile No"
            android:inputType="textEmailAddress"
            android:textColor="@color/appTextMaterialDark" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signup_mobile_no_layout"
        android:background="@drawable/login_button"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/login_button_text"
        android:textColor="@color/button_selection" />

    <Button
        android:id="@+id/has_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:text="@string/has_login_button_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

    <ProgressBar
        android:id="@+id/signup_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_button"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>
